- fixed wrong margins of .ui-video-list-item in large screen sizes - added responsive behavior for player/playlist view - improved transitions for showing/hiding playlist

--- a/clients/youtube_producer/js/app_search/app_search.styl
+++ b/clients/youtube_producer/js/app_search/app_search.styl
@@ -5,8 +5,7 @@
         font-family: source_sans_prolight;
         font-size: 24px;
         display: block;
-        width: 96%;
-        padding: 0 2%;
+        width: 100%;
         height: 50px;
         background-color: #f4f4f4;
         border: 0;
