--- a/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
+++ b/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
@@ -1,16 +1,14 @@
 .yt-viewer {
-    width: 1200px;
     margin: 10px auto;
 
     .video {
-        width: 1200px;
         float: left;
     }
 
     .buttons {
         position: relative;
-        padding: 5px;
-        
+        margin: 5px auto;
+
         .toggle-playlist {
             position: absolute;
             right: 5px;
@@ -20,23 +18,15 @@
 
     &.playlist-visible {
         .video {
-            width: 800px;
         }
     }
 }
 
 .yt-player {
-  width: 100%;
-  height: 600px;
-  border: solid red 2px;
+    height: 600px;
 }
 
 .yt-video-description {
-    width: 100%;
-    height: 200px;
-    border: solid orange 2px;
-    padding: 10px;
-
     .metadata {
         margin-top: 10px;
         padding-top: 10px;
@@ -54,10 +44,7 @@
 }
 
 .yt-viewer .playlist {
-    width: 380px;
     height: 900px;
-    border: solid black 2px;
-    float: right;
     overflow-y: auto;
     overflow-x: hidden;
 
@@ -67,16 +54,16 @@
 }
 
 .yt-controls {
-  display: none;
+    display: none;
 }
 
 .tvmode {
 
-  .yt-viewer, .video, .yt-player {
-    height: 100%;
-    width: 100% !important;
-    position: relative;
-  }
+    .yt-viewer, .video, .yt-player {
+        height: 100%;
+        width: 100% !important;
+        position: relative;
+    }
 
     .yt-viewer {
         h2,
@@ -85,22 +72,22 @@
         }
     }
 
-  .yt-player {
-    position: absolute;
-  }
+    .yt-player {
+        position: absolute;
+    }
 
-  .yt-controls {
-    position: absolute;
-    bottom: 10px;
-    height: 200px;
-    width: 100%;
-    border: solid pink 2px;
-    display: block;
-  }
+    .yt-controls {
+        position: absolute;
+        bottom: 10px;
+        height: 200px;
+        width: 100%;
+        border: solid pink 2px;
+        display: block;
+    }
 
-  app-search,
-  .yt-video-description,
-  .playlist {
-     display: none;
-  }
+    app-search,
+    .yt-video-description,
+    .playlist {
+        display: none;
+    }
 }
